--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class = "header">
   <app-nav-bar></app-nav-bar>
 </div>
+<app-login></app-login>
+<router-outlet></router-outlet>
 <app-property-list></app-property-list>
