--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -1,19 +1,14 @@
-<div class="row">
-  <div class="col-md-8 offset-md-1">
-      <div class="card">
-          <form class="card-body" #form="ngForm" autocomplete="off" (submit)="login(form)">
-              <div class="form-group">
-                  <label class="control-label">Email</label>
-                  <input name="email" #name="ngModel" [(ngModel)]="form.value.email" class="form-control" required>
-              </div>
-              <div class="form-group">
-                  <label class="control-label">Пароль</label>
-                  <input type="password" name="password" #password="ngModel" [(ngModel)]="form.value.password" class="form-control" required>
-              </div>
-              <div class="form-group">
-                  <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Войти</button>
-              </div>
-          </form>
-      </div>
+<form class="card" #form="ngForm" autocomplete="off" (submit)="login(form)">
+  <div class="form-group">
+      <label class="control-label">Email</label>
+      <input name="email" #name="ngModel" [(ngModel)]="form.value.email" class="form-control" required>
   </div>
-</div>
+  <div class="form-group">
+      <label class="control-label">Пароль</label>
+      <input type="password" name="password" #password="ngModel" [(ngModel)]="form.value.password" class="form-control" required>
+  </div>
+  <div class="form-group">
+      <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Войти</button>
+  </div>
+</form>
+
