--- a/front/src/app/property/property-list/property-list.component.html
+++ b/front/src/app/property/property-list/property-list.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-lg-9 col-xl-10">
+<div class="articles-list row">
+  <div class="row row-cols-1 row-cols-md-1">
     <div *ngFor="let article of articles" class="article">
       <app-property-card [article]="article"></app-property-card>
     </div>
