--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -1,13 +1,15 @@
-<form class="card" #form="ngForm" autocomplete="off" (submit)="login(form)">
-  <div class="form-group">
-      <label class="control-label">Email</label>
-      <input name="email" #name="ngModel" [(ngModel)]="form.value.email" class="form-control" required>
-  </div>
-  <div class="form-group">
-      <label class="control-label">Пароль</label>
-      <input type="password" name="password" #password="ngModel" [(ngModel)]="form.value.password" class="form-control" required>
-  </div>
-  <div class="form-group">
-      <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Войти</button>
-  </div>
-</form>
+<div class="login-page">
+  <form class="card" #form="ngForm" autocomplete="off" (submit)="login(form)">
+    <div class="form-group">
+        <label class="control-label">Email</label>
+        <input name="email" #name="ngModel" [(ngModel)]="form.value.email" class="form-control" required>
+    </div>
+    <div class="form-group">
+        <label class="control-label">Пароль</label>
+        <input type="password" name="password" #password="ngModel" [(ngModel)]="form.value.password" class="form-control" required>
+    </div>
+    <div class="form-group">
+        <button class="btn btn-primary" type="submit" [disabled]="form.invalid" onclick="">Войти</button>
+    </div>
+  </form>
+</div>
