--- a/front/src/app/nav-bar/nav-bar.component.html
+++ b/front/src/app/nav-bar/nav-bar.component.html
@@ -6,13 +6,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#" >Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">My articles</a>
+        <a class="nav-link" href="#" routerLinkActive="active" *ngIf="authService.isAuthenticated()" >My articles</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/create-article']">Create</a>
+        <a class="nav-link" [routerLink]="['/create-article']" routerLinkActive="active" *ngIf="authService.isAuthenticated()">Create</a>
       </li>
     </ul>
     <button class="btn btn-md btn-outline-primary" type="button" [routerLink]="['/login']">Sing in</button>
