--- a/front/src/app/property/property-card/property-card.component.html
+++ b/front/src/app/property/property-card/property-card.component.html
@@ -1,4 +1,7 @@
 <div class="card">
   <p>{{ article.title }}</p>
   <p>{{ article.description }} </p>
+  <div class="description-button">
+  <button type="button" class="btn btn-dark btn-sm" routerLink="/article/{{article.id}}">Подробнее</button>
+  </div>
 </div>
