--- a/front/src/app/article/article.component.html
+++ b/front/src/app/article/article.component.html
@@ -1,3 +1,15 @@
-<p>{{article.title}}</p>
-<p>{{article.description}}</p>
-<p>{{article.content}}</p>
+<div class="common">
+  <h1>{{article.title}}</h1>
+  <div class= "autor-login">
+    <p>{{article.userLogin}}</p>
+  </div>
+  <div class="description">
+    <p>{{article.description}}</p>
+  </div>
+  <div class="content">
+    <p>{{article.content}}</p>
+  </div>
+  <div class="comments">
+    <h4>Комментарии</h4>
+  </div>
+</div>
