--- a/front/src/app/comment/comment.component.css
+++ b/front/src/app/comment/comment.component.css
@@ -1,7 +1,4 @@
 .comment
 {
-  border: 1px solid silver;
-  border-radius: 4px;
-  padding: 5px;
-  margin: auto 30px 10px;
+  margin-left: 30px;
 }
