--- a/front/src/app/article/article.component.html
+++ b/front/src/app/article/article.component.html
@@ -1,5 +1,12 @@
 <div class="common">
   <h1>{{article.title}}</h1>
+  <div class="categories-list">
+    <div class="row row-cols-7 row-cols-md-7">
+      <div *ngFor="let category of categories" class="categories">
+        <app-category [category]="category"></app-category>
+      </div>
+    </div>
+  </div>
   <div class= "autor-login">
     <p>author: {{article.userLogin}}</p>
   </div>
