Добавила к статьям картинки

--- a/front/src/app/property/property-card/property-card.component.html
+++ b/front/src/app/property/property-card/property-card.component.html
@@ -10,6 +10,9 @@
   <div class="description">
     <p>{{ article.description }} </p>
   </div>
+  <div>
+    <img src="assets/images/{{images[0].name}}" class="image">
+  </div>
   <div class="description-button">
   <button type="button" class="btn btn-dark btn-sm" routerLink="/article/{{article.id}}">Подробнее</button>
   </div>
