--- a/front/src/app/article/article.component.html
+++ b/front/src/app/article/article.component.html
@@ -16,6 +16,13 @@
   <div class="content">
     <p>{{article.content}}</p>
   </div>
+  <div class="images">
+    <div class="row row-cols-1 row-cols-md-1">
+      <div *ngFor="let image of images" class="images">
+        <img src="assets/images/{{image.name}}" class="image">
+      </div>
+    </div>
+  </div>
   <div class="comments">
     <h4>Комментарии</h4>
   </div>
