--- a/front/src/app/property/property-card/property-card.component.css
+++ b/front/src/app/property/property-card/property-card.component.css
@@ -1,12 +1,13 @@
 .card
 {
   margin-top: 10px;
-  padding: 5px;
+  padding: 10px;
+  border: none;
 }
 
 .description-button
 {
-  margin-right: auto;
+  margin: 15px auto 0 0;
 }
 
 .categories-list
