--- a/front/src/app/property/property-card/property-card.component.html
+++ b/front/src/app/property/property-card/property-card.component.html
@@ -7,6 +7,9 @@
       </div>
     </div>
   </div>
+  <div class= "autor-login">
+    <p>author: {{article.userLogin}}</p>
+  </div>
   <div class="description">
     <p>{{ article.description }} </p>
   </div>
