--- a/front/src/app/property/property-list/property-list.component.css
+++ b/front/src/app/property/property-list/property-list.component.css
@@ -5,7 +5,6 @@
 
 .search-in-articles{
   border: 1px solid #ccc;
-  display: inline-block;
   border-radius: 3px;
   font-size: 20px;
   display: inline-flex;
@@ -13,6 +12,7 @@
 
 .form-control
 {
+  box-shadow: none;
   border: none;
 }
 
