Добавлена возможность зарегистрироваться

--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -9,7 +9,7 @@
         <input type="password" name="password" #password="ngModel" [(ngModel)]="form.value.password" class="form-control" required>
     </div>
     <div class="form-group">
-        <button class="btn btn-primary" type="submit" [disabled]="form.invalid" onclick="">Войти</button>
+        <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Войти</button>
     </div>
   </form>
 </div>
