--- a/front/src/app/registration/registration.component.html
+++ b/front/src/app/registration/registration.component.html
@@ -1,1 +1,23 @@
-<p>registration works!</p>
+<div class="registration-page">
+  <form class="card" #form="ngForm" autocomplete="off" (submit)="register(form)">
+    <div class="form-group">
+        <label class="control-label">Login</label>
+        <input name="login" #name="ngModel" [(ngModel)]="form.value.login" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label class="control-label">Email</label>
+      <input name="email" #name="ngModel" [(ngModel)]="form.value.email" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label class="control-label">Name</label>
+      <input name="name" #name="ngModel" [(ngModel)]="form.value.name" class="form-control" required>
+    </div>
+    <div class="form-group">
+        <label class="control-label">Пароль</label>
+        <input type="password" name="password" #password="ngModel" [(ngModel)]="form.value.password" class="form-control" required>
+    </div>
+    <div class="form-group">
+        <button class="btn btn-primary" type="submit" [disabled]="form.invalid" onclick="">Зарегистрироваться</button>
+    </div>
+  </form>
+</div>
