Получение списка статей пользователя

--- a/front/src/app/articles-list/articles-list.component.html
+++ b/front/src/app/articles-list/articles-list.component.html
@@ -12,7 +12,7 @@
   <div class="articles-list row">
     <div class="row row-cols-1 row-cols-md-1">
       <div *ngFor="let article of articles" class="article">
-       <app-property-card [article]="article"></app-property-card>
+       <app-article-card [article]="article"></app-article-card>
       </div>
     </div>
   </div>
