--- a/front/src/app/nav-bar/nav-bar.component.html
+++ b/front/src/app/nav-bar/nav-bar.component.html
@@ -9,14 +9,14 @@
         <a class="nav-link" href="#" >Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" routerLinkActive="active" *ngIf="isLoggedIn" >My articles</a>
+        <a class="nav-link" [routerLink]="['/user-atricles']" routerLinkActive="active" *ngIf="isLoggedIn" >My articles</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/create-article']" routerLinkActive="active" *ngIf='isLoggedIn'>Create</a>
       </li>
     </ul>
     <button class="btn btn-outline-dark" type="button" [routerLink]="['/login']" *ngIf='!isLoggedIn'>Sign in</button>
-    <button class="btn btn-outline-dark" type="button" *ngIf='isLoggedIn' (click)='logout()'>Sign out</button>
+    <button class="btn btn-outline-dark" type="button" *ngIf='isLoggedIn' (click)='logout()' [routerLink]="['/login']">Sign out</button>
     <div class="sign-up-button">
       <button class="btn btn-dark" type="button" [routerLink]="['/registration']" *ngIf='!isLoggedIn' >Sign up</button>
     </div>
