--- a/front/src/app/user-articles-list/user-articles-list.component.html
+++ b/front/src/app/user-articles-list/user-articles-list.component.html
@@ -1,5 +1,5 @@
 <div class="common row">
-  <div class="row row-cols-1 row-cols-md-1">
+  <div class="col-md-12">
     <div *ngFor="let article of articles" class="article">
       <h5>{{ article.title }}</h5>
       <p>{{ article.description }}</p>
