--- a/front/src/app/article-card/article-card.component.css
+++ b/front/src/app/article-card/article-card.component.css
@@ -1,7 +1,6 @@
 .card
 {
-  margin-top: 10px;
-  padding: 10px;
+  margin: 20px auto 10px;
   border: none;
 }
 
@@ -18,5 +17,5 @@
 
 .categories-list
 {
-  margin-left: 10px;
+  margin: 0 10px 0;
 }
