--- a/front/src/app/article/article.component.html
+++ b/front/src/app/article/article.component.html
@@ -17,7 +17,7 @@
     <p>{{article.content}}</p>
   </div>
   <div class="images">
-    <div class="row row-cols-1 row-cols-md-1">
+    <div class="row row-cols-1">
       <div *ngFor="let image of images" class="images">
         <img src="assets/images/{{image.name}}" class="image">
       </div>
