--- a/front/src/app/articles-list/articles-list.component.html
+++ b/front/src/app/articles-list/articles-list.component.html
@@ -10,7 +10,7 @@
     <i class="fas fa-search" type="submit" (click)="getArticlesByAutor()"></i>
   </form>
   <div class="articles-list row">
-    <div class="row row-cols-1 row-cols-md-1">
+    <div class="col-md-12">
       <div *ngFor="let article of articles" class="article">
        <app-article-card [article]="article"></app-article-card>
       </div>
