--- a/front/src/app/create-article/create-article.component.html
+++ b/front/src/app/create-article/create-article.component.html
@@ -1,1 +1,26 @@
-<p>create-article works!</p>
+<div class="create-article-block">
+  <form class="add-form">
+    <div class="form-group">
+      <label>Название</label>
+      <input class="form-control" id="title" [(ngModel)]="title" name="title">
+    </div>
+    <div class="form-group">
+      <label>Описание</label>
+      <textarea class="form-control" type="label-textarea" id="description" [(ngModel)]="description" name="description"></textarea>
+    </div>
+    <div class="form-group">
+      <label>Текст</label>
+     <textarea class="form-control" id="content" [(ngModel)]="content" name="content"></textarea>
+    </div>
+  </form>
+  <div class="categories-list row">
+    <label>Карегории</label>
+    <div *ngFor="let category of categories, index as i">
+      <input class="i" type="checkbox" [(ngModel)]="category[i]" (ngModelChange)="addSelected(category, $event)" />
+      {{category.title}}
+    </div>
+  </div>
+  <div class="form-group">
+    <button class="btn btn-primary" name="add" type="submit" (click)="createArticle()">Создать</button>
+  </div>
+</div>
