Возможность создания статьи со всеми составляющими

--- a/front/src/app/components/article/article.component.html
+++ b/front/src/app/components/article/article.component.html
@@ -19,7 +19,7 @@
   <div class="images">
     <div class="row row-cols-1">
       <div *ngFor="let image of images" class="images">
-        <img src="assets/images/{{image.name}}" class="image">
+        <img src="assets/{{image.name}}" class="image">
       </div>
     </div>
   </div>
