--- a/front/src/app/components/article-card/article-card.component.html
+++ b/front/src/app/components/article-card/article-card.component.html
@@ -14,7 +14,7 @@
     <p>{{ article.description }} </p>
   </div>
   <div>
-    <img *ngIf='images[0]' src="assets/images/{{images[0].name}}" class="image">
+    <img *ngIf='images[0]' src="assets/{{images[0].name}}" class="image">
   </div>
   <div class="description-button">
   <button type="button" class="btn btn-dark btn-sm" routerLink="/article/{{article.id}}">Подробнее</button>
