--- a/front/src/app/components/create-article/create-article.component.html
+++ b/front/src/app/components/create-article/create-article.component.html
@@ -1,5 +1,5 @@
 <div class="create-article-block">
-  <form class="add-form">
+  <form class="add-form" onsubmit="yourJsFunction();return false">
     <div class="form-group">
       <label>Название</label>
       <input class="form-control" id="title" [(ngModel)]="title" name="title">
@@ -20,7 +20,12 @@
       {{category.title}}
     </div>
   </div>
-  <div class="form-group">
-    <button class="btn btn-primary" name="add" type="submit" (click)="createArticle()">Создать</button>
+  <div class="upload-images">
+    <ng-container>
+        <input type="file" id="file" multiple (change)="getFileDetails($event)">
+    </ng-container>
+  </div>
+  <div class="form-group" ng-submit={expression}>
+    <button class="btn btn-primary" name="add" type='button' (click)="createArticle()">Создать</button>
   </div>
 </div>
