--- a/front/src/app/components/registration/registration.component.html
+++ b/front/src/app/components/registration/registration.component.html
@@ -18,6 +18,7 @@
     </div>
     <div class="form-group">
         <button class="btn btn-primary" type="submit" [disabled]="form.invalid" onclick="">Зарегистрироваться</button>
+        <label class="login-link-message">Уже есть аккаунт? <a [routerLink]="['/login']">Войдите</a></label>
     </div>
   </form>
 </div>
