--- a/front/src/app/components/create-article/create-article.component.html
+++ b/front/src/app/components/create-article/create-article.component.html
@@ -25,7 +25,7 @@
         <input type="file" id="file" multiple (change)="getFileDetails($event)">
     </ng-container>
   </div>
-  <div class="form-group" ng-submit={expression}>
+  <div class="form-group">
     <button class="btn btn-primary" name="add" type='button' (click)="createArticle()">Создать</button>
   </div>
 </div>
