--- a/front/src/app/components/article/article.component.html
+++ b/front/src/app/components/article/article.component.html
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="comments">
-    <h4>Комментарии</h4>
+    <h4>Comments</h4>
   </div>
   <div>
   <p *ngIf='!isLoggedIn'>
