--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -5,12 +5,12 @@
         <input name="email" #name="ngModel" [(ngModel)]="form.value.email" class="form-control" required>
     </div>
     <div class="form-group">
-        <label class="control-label">Пароль</label>
+        <label class="control-label">Password</label>
         <input type="password" name="password" #password="ngModel" [(ngModel)]="form.value.password" class="form-control" required>
     </div>
     <div class="form-group">
-        <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Войти</button>
-        <label class="registration-link-message">Нет аккаунта? <a [routerLink]="['/registration']">Зарегистрируйтесь</a></label>
+        <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Sign In</button>
+        <label class="registration-link-message">Don't have an account? <a [routerLink]="['/registration']">Sign up</a></label>
     </div>
   </form>
 </div>
