--- a/front/src/app/components/registration/registration.component.html
+++ b/front/src/app/components/registration/registration.component.html
@@ -13,12 +13,12 @@
       <input name="name" #name="ngModel" [(ngModel)]="form.value.name" class="form-control" required>
     </div>
     <div class="form-group">
-        <label class="control-label">Пароль</label>
+        <label class="control-label">Password</label>
         <input type="password" name="password" #password="ngModel" [(ngModel)]="form.value.password" class="form-control" required>
     </div>
     <div class="form-group">
-        <button class="btn btn-primary" type="submit" [disabled]="form.invalid" onclick="">Зарегистрироваться</button>
-        <label class="login-link-message">Уже есть аккаунт? <a [routerLink]="['/login']">Войдите</a></label>
+        <button class="btn btn-primary" type="submit" [disabled]="form.invalid" onclick="">Sign Up</button>
+        <label class="login-link-message">Already have an account? <a [routerLink]="['/login']">Sign in</a></label>
     </div>
   </form>
 </div>
