изменила язык у оставшихся элементов

--- a/front/src/app/components/article-card/article-card.component.html
+++ b/front/src/app/components/article-card/article-card.component.html
@@ -17,6 +17,6 @@
     <img *ngIf='images[0]' src="assets/{{images[0].name}}" class="image">
   </div>
   <div class="description-button">
-  <button type="button" class="btn btn-dark btn-sm" routerLink="/article/{{article.id}}">Подробнее</button>
+  <button type="button" class="btn btn-dark btn-sm" routerLink="/article/{{article.id}}">More</button>
   </div>
 </div>
