--- a/front/src/app/components/articles-list/articles-list.component.html
+++ b/front/src/app/components/articles-list/articles-list.component.html
@@ -17,8 +17,8 @@
         {{category.title}}
       </div>
     </div>
-    <button type="button" class="btn btn-dark btn-sm" id="discard-seach-button" (click)="getArticlesByCategories()" onclick="this.blur()">Применить</button>
-    <button type="button" class="btn btn-dark btn-sm" id="discard-seach-button" (click)="discardSearch()" onclick="this.blur()">Сбросить</button>
+    <button type="button" class="btn btn-dark btn-sm" id="discard-seach-button" (click)="getArticlesByCategories()" onclick="this.blur()">Apply</button>
+    <button type="button" class="btn btn-dark btn-sm" id="discard-seach-button" (click)="discardSearch()" onclick="this.blur()">Reset</button>
   </div>
   <div class="articles-list row">
     <div class="col-md-12">
