--- a/front/src/app/components/user-articles-list/user-articles-list.component.html
+++ b/front/src/app/components/user-articles-list/user-articles-list.component.html
@@ -3,8 +3,8 @@
     <div *ngFor="let article of articles" class="article">
       <h5>{{ article.title }}</h5>
       <p>{{ article.description }}</p>
-      <button type="button" class="btn btn-dark btn-sm" routerLink="/article/{{article.id}}">Подробнее</button>
-      <button type="button" class="btn btn-dark btn-sm" (click)="deleteArticle(article.id)">Удалить</button>
+      <button type="button" class="btn btn-dark btn-sm" routerLink="/article/{{article.id}}">More</button>
+      <button type="button" class="btn btn-dark btn-sm" (click)="deleteArticle(article.id)">Delete</button>
       <hr>
     </div>
   </div>
