--- a/front/src/app/components/create-article/create-article.component.html
+++ b/front/src/app/components/create-article/create-article.component.html
@@ -1,20 +1,20 @@
 <div class="create-article-block">
   <form class="add-form" onsubmit="yourJsFunction();return false">
     <div class="form-group">
-      <label>Название</label>
+      <label>Title</label>
       <input class="form-control" id="title" [(ngModel)]="title" name="title">
     </div>
     <div class="form-group">
-      <label>Описание</label>
+      <label>Description</label>
       <textarea class="form-control" type="label-textarea" id="description" [(ngModel)]="description" name="description"></textarea>
     </div>
     <div class="form-group">
-      <label>Текст</label>
+      <label>Content</label>
      <textarea class="form-control" id="content" [(ngModel)]="content" name="content"></textarea>
     </div>
   </form>
   <div class="categories-list row">
-    <label>Категории</label>
+    <label>Categories</label>
     <div *ngFor="let category of categories, index as i">
       <input class="i" type="checkbox" [(ngModel)]="category[i]" (ngModelChange)="addSelected(category, $event)" />
       {{category.title}}
@@ -22,10 +22,10 @@
   </div>
   <div class="upload-images">
     <ng-container>
-        <input type="file" id="file" multiple (change)="getFileDetails($event)">
+        <type="file" id="file" multiple (change)="getFileDetails($event)">
     </ng-container>
   </div>
   <div class="form-group">
-    <button class="btn btn-primary" name="add" type='button' (click)="createArticle()">Создать</button>
+    <button class="btn btn-primary" name="add" type='button' (click)="createArticle()">Create</button>
   </div>
 </div>
