--- a/front/src/app/components/create-article/create-article.component.html
+++ b/front/src/app/components/create-article/create-article.component.html
@@ -22,7 +22,7 @@
   </div>
   <div class="upload-images">
     <ng-container>
-        <type="file" id="file" multiple (change)="getFileDetails($event)">
+        <input type="file" id="file" multiple (change)="getFileDetails($event)">
     </ng-container>
   </div>
   <div class="form-group">
