--- a/front/src/app/components/articles-list/articles-list.component.html
+++ b/front/src/app/components/articles-list/articles-list.component.html
@@ -20,6 +20,14 @@
     <button type="button" class="btn btn-dark btn-sm" id="discard-seach-button" (click)="getArticlesByCategories()" onclick="this.blur()">Apply</button>
     <button type="button" class="btn btn-dark btn-sm" id="discard-seach-button" (click)="discardSearch()" onclick="this.blur()">Reset</button>
   </div>
+  <div class="btn-group btn-group-toggle sort-mode" data-toggle="buttons">
+    <label class="sort-option">
+      <input type="radio" name="options" id="by newest" autocomplete="off" checked (click)="getArticlesByDesc()"> Sort by newest
+    </label>
+    <label class="sort-option">
+      <input type="radio" name="options" id="by oldest" autocomplete="off" (click)="getArticlesByAsc()"> Sort by oldest
+    </label>
+  </div>
   <div class="articles-list row">
     <div class="col-md-12">
       <div *ngFor="let article of articles" class="article">
