--- a/front/src/app/components/create-article/create-article.component.html
+++ b/front/src/app/components/create-article/create-article.component.html
@@ -1,5 +1,5 @@
 <div class="create-article-block">
-  <form class="add-form" onsubmit="yourJsFunction();return false">
+  <form class="add-form" onsubmit="return false">
     <div class="form-group">
       <label>Title</label>
       <input class="form-control" id="title" [(ngModel)]="title" name="title">
