--- a/front/src/app/components/user-articles-list/user-articles-list.component.html
+++ b/front/src/app/components/user-articles-list/user-articles-list.component.html
@@ -4,6 +4,7 @@
       <h5>{{ article.title }}</h5>
       <p>{{ article.description }}</p>
       <button type="button" class="btn btn-dark btn-sm" routerLink="/article/{{article.id}}">More</button>
+      <button type="button" class="btn btn-dark btn-sm" routerLink="/edit-article/{{article.id}}">Edit</button>
       <button type="button" class="btn btn-dark btn-sm" (click)="deleteArticle(article.id)">Delete</button>
       <hr>
     </div>
