--- a/front/src/app/components/articles-list/articles-list.component.html
+++ b/front/src/app/components/articles-list/articles-list.component.html
@@ -21,11 +21,11 @@
     <button type="button" class="btn btn-dark btn-sm" id="discard-seach-button" (click)="discardSearch()" onclick="this.blur()">Reset</button>
   </div>
   <div class="btn-group btn-group-toggle sort-mode" data-toggle="buttons">
-    <label class="sort-option">
-      <input type="radio" name="options" id="by newest" autocomplete="off" checked (click)="getArticlesByDesc()"> Sort by newest
+    <label class="sort-option btn btn-secondary btn-sm active" id="desc">
+      <input type="radio" name="options" id="by newest" checked = "checked" (click)="ByDesc()"> Sort by newest
     </label>
-    <label class="sort-option">
-      <input type="radio" name="options" id="by oldest" autocomplete="off" (click)="getArticlesByAsc()"> Sort by oldest
+    <label class="sort-option btn btn-secondary btn-sm" id="asc">
+      <input type="radio" name="options" id="by oldest" (click)="ByAsc()"> Sort by oldest
     </label>
   </div>
   <div class="articles-list row">
