--- a/front/src/app/components/edit-article/edit-article.component.html
+++ b/front/src/app/components/edit-article/edit-article.component.html
@@ -40,6 +40,6 @@
     <button class="btn btn-secondary btn-sm" id="cancel-change-images-button" type='button' (click)="viewCurrentImagesBlock()">Сancel</button>
   </div>
   <div class="form-group">
-    <button class="btn btn-primary" name="add" type='button' (click)="editArticle()">Edit</button>
+    <button class="btn btn-primary" name="add" type='button' (click)="editArticle()">Save</button>
   </div>
 </div>
