--- a/front/src/app/components/registration/registration.component.html
+++ b/front/src/app/components/registration/registration.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="form-group">
       <label class="control-label">Email</label>
-      <input name="email" #name="ngModel" [(ngModel)]="form.value.email" class="form-control" required>
+      <input name="email" #name="ngModel" [(ngModel)]="form.value.email" class="form-control" email required>
     </div>
     <div class="form-group">
       <label class="control-label">Name</label>
