--- a/front/src/app/components/registration/registration.component.html
+++ b/front/src/app/components/registration/registration.component.html
@@ -1,20 +1,34 @@
 <div class="registration-page">
   <form class="card" #form="ngForm" autocomplete="off" (submit)="register(form)">
     <div class="form-group">
-        <label class="control-label">Login</label>
-        <input name="login" #name="ngModel" [(ngModel)]="form.value.login" class="form-control" required>
+      <label class="control-label">Login</label>
+      <input name="login" #login="ngModel" [(ngModel)]="form.value.login" class="form-control"
+        pattern="[\w.-]{3,19}[0-9a-zA-Z]" required>
+      <div [hidden]="login.valid || login.untouched" class="alert alert-danger">
+        Login must contain at least 4 characters, can contain numbers, letters in lower or upper case
+      </div>
     </div>
     <div class="form-group">
       <label class="control-label">Email</label>
-      <input name="email" #name="ngModel" [(ngModel)]="form.value.email" class="form-control" email required>
+      <input name="email" #email="ngModel" [(ngModel)]="form.value.email" class="form-control" email required>
+      <div [hidden]="email.valid || email.untouched" class="alert alert-danger">
+        Incorrect email
+      </div>
     </div>
     <div class="form-group">
       <label class="control-label">Name</label>
       <input name="name" #name="ngModel" [(ngModel)]="form.value.name" class="form-control" required>
+      <div [hidden]="name.valid || name.untouched" class="alert alert-danger">
+        This field can't be empty
+      </div>
     </div>
     <div class="form-group">
-        <label class="control-label">Password</label>
-        <input type="password" name="password" #password="ngModel" [(ngModel)]="form.value.password" class="form-control" required>
+      <label class="control-label">Password</label>
+      <input type="password" name="password" #password="ngModel" [(ngModel)]="form.value.password" class="form-control"
+        pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,30}" required>
+      <div [hidden]="password.valid || password.untouched" class="alert alert-danger">
+        Password must contain at least 8 characters, numbers, letters in lower and lower case
+      </div>
     </div>
     <div class="form-group">
         <button class="btn btn-primary" type="submit" [disabled]="form.invalid" onclick="">Sign Up</button>
