Добавил даты, сделала сортировку по датам + изменения во фронте

--- a/front/src/app/components/article-card/article-card.component.html
+++ b/front/src/app/components/article-card/article-card.component.html
@@ -1,5 +1,9 @@
 <div class="card">
-  <h5>{{ article.title }}</h5>
+  <h5 class="title">{{ article.title }}</h5>
+  <div class="login-and-date">
+    <p class="autor-login">{{ article.userLogin }}</p>
+    <p class="date-view">{{ article.creationDate | date:'MMM d, y, H:mm'}}</p>
+  </div>
   <div class="categories-list">
     <div class="row row-cols-7 row-cols-md-7">
       <div *ngFor="let category of categories" class="categories">
@@ -7,11 +11,8 @@
       </div>
     </div>
   </div>
-  <div class= "autor-login">
-    <p>author: {{article.userLogin}}</p>
-  </div>
   <div class="description">
-    <p>{{ article.description }} </p>
+    <p>{{ article.description }}</p>
   </div>
   <div>
     <img *ngIf='images[0]' src="assets/{{images[0].name}}" class="image">
