--- a/front/src/app/components/articles-list/articles-list.component.html
+++ b/front/src/app/components/articles-list/articles-list.component.html
@@ -23,10 +23,10 @@
   </div>
   <div class="btn-group btn-group-toggle sort-mode" data-toggle="buttons">
     <label class="sort-option btn btn-secondary btn-sm active" id="desc">
-      <input type="radio" name="options" id="by newest" checked = "checked" (click)="ByDesc()"> Sort by newest
+      <input type="radio" name="options" id="by newest" checked = "checked" (click)="ByDesc()"> Newer
     </label>
     <label class="sort-option btn btn-secondary btn-sm" id="asc">
-      <input type="radio" name="options" id="by oldest" (click)="ByAsc()"> Sort by oldest
+      <input type="radio" name="options" id="by oldest" (click)="ByAsc()"> Older
     </label>
   </div>
   <div class="articles-list row">
