--- a/front/src/app/components/article-card/article-card.component.css
+++ b/front/src/app/components/article-card/article-card.component.css
@@ -4,9 +4,13 @@
   border: none;
 }
 
+.title
+{
+  margin-bottom: 5px;
+}
+
 .autor-login
 {
-  height: 30px;
   font-weight: 500;
 }
 
@@ -23,4 +27,20 @@
 .image
 {
   width: 100%;
+}
+
+.login-and-date
+{
+  display: inline-flex;
+}
+
+.autor-login
+{
+  margin-bottom: 8px;
+}
+
+.date-view
+{
+  margin-left: 10px;
+  margin-bottom: 8px;
 }
